# weatherflow-scheduler

./: CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt
app/include/: distance_calc.hpp  main_logic.hpp  parser.hpp  response_to_api.hpp  structs.hpp
app/qt/: main_window.cpp  main_window.hpp
app/src/: distance_calc.cpp  main_logic.cpp  parser.cpp  response_to_api.cpp
lib/: CMakeLists.txt  TTaskScheduler.hpp  TTaskScheduler_internal.hpp  TTaskScheduler_storage.hpp  TTaskScheduler_traits.hpp
manual_libraries/: my_cstddef.hpp  my_exception.hpp  my_tuple.hpp  my_type_traits.hpp  my_utility.hpp
tests/: CMakeLists.txt  apply_tests.cpp  compile_time_tests.cpp  execution_tests.cpp  future_tests.cpp  invocation_tests.cpp  result_semantics_tests.cpp
